@@ -1,3 +1,7 @@
+2012-11-28  H.J. Lu  <hongjiu.lu@intel.com>
+
+	* bootstrap-asan.mk: New file.
+
 2012-11-04  Thomas Schwinge  <thomas@codesourcery.com>
 
 	* dfp.m4 (enable_decimal_float): Enable for i?86*-*-gnu*.
